--- a/main.css
+++ b/main.css
@@ -4864,13 +4864,13 @@ sup {
 }
 
 .header .site-title {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
     font-size: 50px;
     display: block;
     line-height: 1;
     color: #61dafb
 }
-
-@media only screen and (min-width:768px) {}
 
 @media only screen and (min-width:768px) {
     .header .site-title {
@@ -4984,8 +4984,6 @@ sup {
     margin: 0 auto;
     max-width: 960px
 }
-
-@media only screen and (min-width:768px) {}
 
 #about svg {
     width: 60px!important;
@@ -5317,136 +5315,4 @@ body {
     .header {
         margin: 40px 25px
     }
-}
-
-.donate_block {
-    position: fixed;
-    top: 0;
-    right: 0;
-    transition: all .5s;
-    color: #fff;
-    padding: 6px 11px;
-    background: #f68a2c;
-    font-size: 18px;
-    border-radius: 0 0 0 4px;
-    font-family: -apple-system, BlinkMacSystemFont, segoe ui, Roboto, helvetica neue, Arial, noto sans, sans-serif;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    z-index: 10
-}
-
-.donate_block:hover {
-    background: #ee6521
-}
-
-#donate_links {
-    position: fixed;
-    top: 46px;
-    right: 12px;
-    background: #fefefe;
-    padding: 6px 0;
-    border-radius: 5px;
-    font-size: 18px;
-    font-family: -apple-system, BlinkMacSystemFont, segoe ui, Roboto, helvetica neue, Arial, noto sans, sans-serif;
-    display: none;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
-    z-index: 10;
-    transition: all .5s
-}
-
-.donate_link {
-    padding: 4px 25px 4px 20px;
-    text-decoration: none;
-    display: block;
-    color: #00569e
-}
-
-.donate_link:hover {
-    background: #dfdfdf
-}
-
-#donate_links ul {
-    list-style: none;
-    padding-left: 0;
-    margin: 0
-}
-
-.modal {
-    position: fixed;
-    z-index: 11;
-    padding-top: 30px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: #000;
-    background-color: rgba(0, 0, 0, .5);
-    transition: opacity .5s ease-out;
-    opacity: 0;
-    height: 0;
-    overflow: hidden;
-    padding: 0
-}
-
-.modal.active {
-    opacity: 1;
-    height: 100%;
-    padding-top: 30px
-}
-
-.modal-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    border: 1px solid #888;
-    width: 88%;
-    max-width: 500px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
-    border-radius: 6px
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: 700;
-    font-family: serif
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer
-}
-
-.modal-header {
-    padding: 2px 16px;
-    background-color: #fefefe;
-    color: #222;
-    border-bottom: 1px solid #ddd;
-    border-radius: 6px 6px 0 0
-}
-
-.modal_header_text {
-    font-size: 18px;
-    margin: 7px 23px 7px 0;
-    text-align: center;
-    font-weight: 400;
-    line-height: 1.5;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, segoe ui, Roboto, helvetica neue, Arial, noto sans, sans-serif
-}
-
-.modal-body {
-    padding: 16px;
-    text-align: center
-}
-
-.modal-body img {
-    width: 250px;
-    max-width: 100%
 }
